packages/platform-shared/src/scss/example-theme.scss
/**
 * Copyright 2019 ForgeRock AS. All Rights Reserved
 *
 * Use of this code requires a commercial software license with ForgeRock AS.
 * or with one of its affiliates. All use shall be exclusively subject
 * to such license between the licensee and ForgeRock AS.
 */

/* Application wide variables can be overridden here
   Forgerock based styles start with fr */
@import url('https:/*fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');

$theme: 'example';
$white: white;
$gray-100: #f6f8fa;
$gray-200: #e7eef4;
$gray-300: #d3d8e0;
$gray-400: #c0c9d5;
$gray-500: #69788b;
$gray-600: #5e6d82;
$gray-700: #455469;
$gray-800: #324054;
$gray-900: #23282e;
$black: black;

$blue: #109cf1;
$indigo: #ba4de1;
$purple: #6f42c1;
$pink: #e83e8c;
$red: #f7685b;
$orange: #fd7e14;
$yellow: #ffb946;
$green: #2ed47a;
$teal: #20c997;
$cyan: #61e2e2;

$primary: $teal;
$secondary: $gray-500;
$success: $teal;
$info: $cyan;
$warning: $yellow;
$danger: $red;
$light: $gray-100;
$dark: $gray-800;
$lightblue: lighten($primary, 23%);

/* Base */
$theme-colors: (
  'primary': $primary,
  'secondary': $secondary,
  'success': $success,
  'info': $info,
  'warning': $warning,
  'danger': $danger,
  'light': $light,
  'dark': $dark,
);

/* Spacing
  
   Control the default styling of most Bootstrap elements by modifying these
   variables. Mostly focused on spacing.
   You can add more entries to the $spacers map, should you need more variation. */
$spacer: 1rem;
$spacers: ();
$spacers: map-merge(
  (
    0: 0,
    1: (
      $spacer * 0.25,
    ),
    2: (
      $spacer * 0.5,
    ),
    3: $spacer,
    4: (
      $spacer * 1.5,
    ),
    5: (
      $spacer * 3,
    ),
  ),
  $spacers
);

/* Global Variables */
$enable-shadows: false;
$enable-rounded: true;

/* General */
$body-bg: $white;
$body-color: $gray-600;
$headings-color: $gray-900;
$font-size-base: 0.9375rem;
$font-weight-bold: 500;
$font-weight-normal: 400;
$font-weight-light: 300;
$small-font-size: 0.8125rem;
$transition-collapse: height 0.25s ease-in;
$border-radius: 0.25rem;
$border-radius-lg: 0.3rem;
$border-radius-sm: 0.2rem;
$border-width: 1px;
$border-color: $gray-200;
$box-shadow-sm: none;
$box-shadow:  none;
$box-shadow-lg: none;
$text-muted: $gray-500;
$code-color: $pink;
$hr-border-color: $gray-200;
$fr-typeface: 'Rubik', sans-serif;
$fr-background-image: none;
$fr-code-editor-bg: $gray-100;

/* Custom form controls */
$custom-control-gutter: 1rem;
$custom-control-indicator-bg: $white;
$custom-control-indicator-active-bg: $gray-200;
$custom-control-indicator-active-border-color: $gray-200;
$custom-select-height: 3rem;
$component-active-color: $white;
$component-active-bg: $primary;
$custom-control-indicator-size: 1rem;
$custom-control-indicator-border-width: 1px;
$custom-control-indicator-border-color: $gray-400;
$custom-control-indicator-checked-color: $component-active-color;
$custom-control-indicator-checked-bg: $primary;
$custom-checkbox-indicator-border-radius: $border-radius;
$custom-checkbox-indicator-indeterminate-box-shadow: none;
$custom-select-focus-border-color: $gray-500;

$custom-switch-width: ($custom-control-indicator-size * 2) * 1.75;
$custom-switch-indicator-border-radius: $custom-control-indicator-size;
$custom-control-indicator-checked-disabled-bg:  rgba(theme-color('primary'), 0.5);
/* stylelint-disable */
$custom-switch-indicator-size: calc(
  #{$custom-control-indicator-size * 2} - #{$custom-control-indicator-border-width *
  4}
) !default;
/* stylelint-enable */
$fr-custom-control-indicator-switch-handle-color: $white;
$fr-custom-control-indicator-switch-handle-disabled-color: $white;
$fr-custom-control-indicator-switch-border-color: $gray-400;
$fr-custom-control-indicator-switch-background-color: $gray-400;
$fr-custom-control-indicator-switch-checked-disabled-border-color: $custom-control-indicator-checked-disabled-bg;

/* Input */
$input-padding-y: 0.75rem;
$input-placeholder-color: $gray-500;
$input-btn-padding-x: 0.75rem;
$input-btn-padding-y: 0.75rem;
$input-btn-padding-x-lg: 1.375rem;
$input-btn-padding-y-lg: 0.8125rem;
$input-bg: $gray-200;
$input-disabled-bg: $gray-100;
$input-border-color: $gray-200;
$input-color: $gray-900;
$label-color: $body-color;
$input-btn-color: $gray-800;
$input-btn-active-color: $gray-900;
$input-group-addon-bg: $input-bg;
$input-btn-focus-width: 0.0625rem;
$input-focus-border-color: $component-active-bg;
$input-btn-focus-color: $component-active-bg;
$input-box-shadow: none;
$fr-input-tag-bg: $gray-300;

/* Input range */
$custom-range-track-bg: $gray-200;
$custom-range-track-box-shadow: none;

/* Headers styles and sizes */
$headings-margin-bottom: ($spacer / 2);
$headings-font-family: inherit;
$headings-font-weight: $font-weight-bold;
$headings-line-height: 1.2;

$h1-font-size: $font-size-base * 3;
$h2-font-size: $font-size-base * 2;
$h3-font-size: $font-size-base * 1.5;
$h4-font-size: $font-size-base * 1.25;
$h5-font-size: $font-size-base;
$h6-font-size: $font-size-base * 0.8125;

$h1-font-weight: 300;
$h2-font-weight: 300;
$h3-font-weight: $headings-font-weight;
$h4-font-weight: $headings-font-weight;
$h5-font-weight: $headings-font-weight;
$h6-font-weight: $headings-font-weight;

$display1-size: $font-size-base * 5;
$display2-size: $font-size-base * 4;
$display3-size: $font-size-base * 3.5;
$display4-size: $font-size-base * 3;
$display1-weight: 300;
$display2-weight: 300;
$display3-weight: 300;
$display4-weight: 300;

$lead-font-weight: 400;

/* Alert */
$alert-padding-y: 1.25rem;
$alert-padding-x: 1.25rem;
$alert-border-width: 0;

/* Forgerock specific alert variables */
$fr-alert-text-color: $gray-700;
$fr-alert-dark-text-color: $gray-100;
$fr-alert-primary-bg-color: lighten($primary, 40%);
$fr-alert-info-bg-color: lighten($info, 26%);
$fr-alert-secondary-bg-color: lighten($secondary, 40%);
$fr-alert-success-bg-color: lighten($success, 40%);
$fr-alert-warning-bg-color: lighten($warning, 26%);
$fr-alert-danger-bg-color: lighten($danger, 26%);
$fr-alert-light-bg-color: $light;
$fr-alert-dark-bg-color: darken($dark, 8%);
$fr-alert-box-shadow: transparent;

/* Badges */
$badge-font-weight: $font-weight-normal;

/* Button */
$btn-padding-x: 1.25rem;
$btn-padding-y: $input-btn-padding-y;
$btn-padding-y-lg: $input-btn-padding-y-lg;
$btn-padding-x-lg: $input-btn-padding-x-lg;
$btn-box-shadow: none;
$btn-focus-box-shadow: none;
$btn-active-box-shadow: none;

/* Allows for customizing button radius independently from global border radius */
$btn-border-radius:           3rem;
$btn-border-radius-lg:        4rem;
$btn-border-radius-sm:        2rem;

/* Cards */
$card-spacer-y: 1.5rem;
$card-spacer-x: 1.5rem;
$card-border-color: $gray-100;
$card-cap-bg: transparent;
$card-cap-color: null;
$card-color: null;
$card-bg: $white;
$card-img-overlay-padding: 1.25rem;
$fr-card-box-shadow: none;
$fr-accordion-border-color: $light;
$fr-center-card-bg: $white;
$fr-center-card-logo-height: 72px;

/* Close */
$close-font-size: $font-size-base * 2.25;
$close-font-weight: $font-weight-light;
$close-color: $black;
$close-text-shadow: none;

/* Dropdown */
$dropdown-border-color: $gray-300;
$dropdown-link-active-color: $gray-900;
$dropdown-link-active-bg: $gray-100;
$dropdown-link-hover-bg: $dropdown-link-active-bg;
$dropdown-header-color: $gray-900;
$dropdown-padding-y: 0.25rem;
$dropdown-item-padding-y: 0.675rem;
$dropdown-link-color: $gray-700;
$dropdown-divider-bg: $gray-200;

/* Forms */
$form-group-margin-bottom: 1.875rem;
$enable-validation-icons: false;

/* Jumbotron */
$jumbotron-bg: transparent;

/* List group */
$list-group-bg: $gray-100;
$list-group-item-padding-y: 1.25rem;
$list-group-item-padding-x: 1.5rem;
$list-group-active-color: $body-color;
$list-group-hover-bg: $lightblue;
$list-group-active-bg: $lightblue;
$list-group-border-color: $gray-200;
$fr-hover-list-color: $list-group-active-bg;
$fr-list-group-active-border-color: $primary;

/* Modal */
$modal-transition: transform 0.3s ease-out;
$modal-content-bg: $white;
$modal-header-border-color: $border-color;
$modal-inner-padding: 1.5rem;
$modal-header-padding-y: 1rem;
$modal-header-padding-x: 1.5rem;
$modal-header-padding: $modal-header-padding-y $modal-header-padding-x;
$modal-title-line-height: 2.25rem;
$fr-modal-title-font-size: 1.25rem;

/* Forgerock specific modal variables */
$fr-modal-header-bg: $modal-content-bg;
$fr-modal-footer-bg: $fr-modal-header-bg;
$fr-modal-footer-border-color: $border-color;
$fr-modal-footer-padding-y: 1rem;
$fr-modal-footer-padding-x: 1.5rem;

/* Popover */
$popover-body-padding-y:0;
$popover-body-padding-x:0;

/* Navbar */
$navbar-padding-y: 1.125rem;
$navbar-padding-x: 1.5rem;
$nav-highlight-color: $primary;
$navbar-height: 4.5rem;
$navbar-toggler-padding-x: 0;
$navbar-dark-toggler-icon-bg: url('data:image/svg+xml;utf-8,<svg xmlns="http:/*www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>');
$navbar-dark-toggler-border-color: transparent;
$navbar-light-color: $dark;
$navbar-default-color: $gray-800;
$navbar-default-bg: $white;
$navbar-default-border: $gray-200;
$fr-navbar-bg: $navbar-default-bg;
$fr-navbar-height: $navbar-height;
$fr-navbar-border: $navbar-default-border;
$fr-navbar-color: $navbar-default-color;

/* Sidemenu */
$fr-sidemenu-background-color: $dark;
$fr-sidemenu-toggler-border-color: $gray-700;
$fr-sidemenu-toggler-background-color: $fr-sidemenu-background-color;
$fr-sidemenu-height: 4.5rem;
$fr-sidemenu-hover:  rgba(0, 0, 0, 0.13);
$fr-sidemenu-active-bg: rgba(0, 0, 0, 0.13);
$fr-sidemenu-shadow: 1px 0 9px rgba(0, 0, 0, 0.13);
$fr-sidemenu-border: none;
$fr-sidemenu-width-lg: 15em;
$fr-sidemenu-width-sm: 4rem;
$fr-sidemenu-color: $gray-200;
$fr-sidemenu-font-color: $gray-200;
$fr-sidemenu-active-color: $white;
$fr-sidemenu-dropdown-heading-color: inherit;
$fr-sidemenu-dropdown-text-color: $gray-700;
$fr-sidemenu-item-active-border-color: $primary;

/* Nav tabs */
$nav-tabs-border-color: $gray-300;
$nav-tabs-link-color: inherit;
$nav-tabs-link-active-color: $primary;
$nav-highlight-color: inherit !default;
$fr-sidetabs-active-bg: $lightblue;
$fr-sidetabs-active-color: $gray-800;
$fr-sidetabs-border: $light;

/* Pagination */
$pagination-color: $text-muted;
$pagination-bg: $card-bg;
$pagination-border-color: transparent;
$pagination-disabled-border-color: transparent;
$pagination-hover-bg: $gray-100;
$pagination-hover-border-color: transparent;
$pagination-active-border-color: transparent;
$pagination-disabled-border-color: transparent;
$pagination-active-color: $dark;
$pagination-active-bg: $gray-100;

/* Progress bars */
$progress-height:                   1rem !default;
$progress-box-shadow:               none;

/* Table */
$table-bg: transparent;
$table-accent-bg: $gray-100;
$table-hover-bg: $gray-100;
$table-cell-padding: 1.25rem 1.5rem;
$table-cell-padding-sm: 0.5rem;
$table-color: $gray-900;
$table-border-color: $gray-200;

/* Forgerock specific table variables */
$fr-table-head-weight: 600;
$fr-table-head-border: 1px;

/* Forgerock specific Toolbar / Navbar */
$fr-toolbar-background: $white;
$fr-application-text-color: $gray-900;
$fr-toolbar-color: $gray-900;
$fr-toolbar-dropdown-color: rgba(0, 0, 0, 0.5);

/* Custom ForgeRock UI Components */

/* Navbar Sidebar */
$fr-navbar-sidebar-fontsize: 0.8125rem;
$fr-navbar-sidebar-icon-fontsize: 1.125rem;
$fr-navbar-sidebar-nav-link-padding: 0.938rem 1rem;

/* Sign up form */
$fr-signup-header-wrapper-height: 5.25rem;

/* Switches */
$fr-switch-bg: $gray-400;
$fr-switch-toggled-bg: $primary;

$fr-background-image: url('~@forgerock/platform-shared/src/assets/images/themes/example/background-login.jpg') no-repeat center center fixed;
$fr-background-size: cover;

